    "use Bytes::Random::Secure;" only drains system entropy if random bytes are
    actually requested.  (Thanks again to Dana Jacobsen for the idea).
  - Modified _seed() to pass seed configuration through to Crypt::Random::Seed's
    constructor.
  - Added a config_seed() class method to facilitate configuration of
    the Crypt::Random::Seed object used in seeding the ISAAC algorithm.
  - Documented how to configure the seeding, and explained why it might be
    useful to do so (drain less system entropy).

0.12 2012-12-09
  - Applied rewrite of random_bytes() from Dana Jacobsen, that improves
    performance while at the same time making better use of the 32 bit random
    value returned by ISAAC.
  - POD fixes/tweaks.

0.11 2012-12-05
  - Fixed a few issues where v0.10 broke compatibility with Perls older than
    v5.10. (Removed // operator.)
  - POD improvements.
  - Added a few entries in MANIFEST.SKIP.
  
0.10 2012-12-04
  - Better handling of random_bytes() (no parameter passed): Now defaults to
    zero bytes explicitly, so we don't get "uninitialized values" warnings.
  - Added random_string_from($bag,$length) function.
  - Added tests for no param list, as well as for new random_string_from()
    function and its support functions.
  - POD enhancements.
  - Removed bytes pragma; it wasn't necessary, and prevented support for
    unicode code points in random_string_from()'s bag.

0.09 2012-11-02
  - "Changes" is now CPAN::Changes::Spec compliant.
  - Added t/09-changes.t to verify spec compliance.

0.08 2012-10-28
  - Added an example in the ./examples/ directory.
  - Added a minimum Perl version to the distribution metadata.

0.07 2012-09-23
  - Refined t/20-functionality.t's approach toward verifying bytes seem well
    behaved.
  - Corrected a couple of POD problems.
  - Note: Under Moose the test suite generates a few warnings.  Not sure what
    the best solution will be (they're harmless but annoying).

0.06 2012-09-21